--- a/Baha'i/Baha/EW/p001-182.html
+++ b/Baha'i/Baha/EW/p001-182.html
@@ -187,7 +187,8 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["O King!..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p21">p. 21</a>;vol. 2, <a href="../../Others/ROB/V2/p337-369Ch16.html#p346">p. 346</a> ; vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p374">p. 374</a>
+	["O King!..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p21">p. 21</a>;vol. 2, <a href="../../Others/ROB/V2/p337-369Ch16.html#p346">p. 346</a> ; vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p374">p. 374</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán"><i>Lawh-i-Sultán</i></a>]
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">12</DIV></center></small></td>
 </tr>
@@ -374,7 +375,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>'The seal of the Choice Wine hath...been broken.'</i> The reference to choice wine, sealed, may be found in the Qur'án (see 83:22-6). The significance of 'sealed' is that the true meanings of the Words of God in former Dispensations were not disclosed until the advent of Bahá'u'lláh (see <i>The Revelation of Bahá'u'lláh</i> vol. 1, pp. <a href="../../Others/ROB/V1/p153-197Ch10.html#p160">160</a>-61, on this prophecy of Daniel). The unsealing of the Choice Wine signifies the revelation of the Word of God in this age, disclosing to mankind new teachings and new laws. Bahá'u'lláh declares in the <i>Kitáb-i-Aqdas</i>, 'Think not that We have revealed unto you a mere code of laws. Nay rather We have unsealed the Choice Wine with the fingers of might and power.' [<i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para5">&para;5</a>] (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#18">Appendix III</a>)<p>
+	<i>'The seal of the Choice Wine hath...been broken.'</i> The reference to choice wine, sealed, may be found in the Qur'án (see <a href="../../../CLUI/UnifiedIndex.html#Qur'án83:22-6">83:22-6</a>). The significance of 'sealed' is that the true meanings of the Words of God in former Dispensations were not disclosed until the advent of Bahá'u'lláh (see <i>The Revelation of Bahá'u'lláh</i> vol. 1, pp. <a href="../../Others/ROB/V1/p153-197Ch10.html#p160">160</a>-61, on this prophecy of Daniel). The unsealing of the Choice Wine signifies the revelation of the Word of God in this age, disclosing to mankind new teachings and new laws. Bahá'u'lláh declares in the <i>Kitáb-i-Aqdas</i>, 'Think not that We have revealed unto you a mere code of laws. Nay rather We have unsealed the Choice Wine with the fingers of might and power.' [<i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para5">&para;5</a>] (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#18">Appendix III</a>)<p>
 	'<i>fisherman</i>', a reference to Peter, the Disciple of Christ. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#19a">Appendix III</a>)
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">19</DIV></center></small></td>
@@ -729,7 +730,9 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	<a name="p39"/>We once again refer unto some of the sublime words revealed in the Tablet to His Majesty the Sháh, so that thou mayest know of a certainty that whatever hath been mentioned hath come from God: "O King! I was but a man like others, asleep upon My couch, when lo, the breezes of the All-Glorious were wafted over Me, and taught Me the knowledge of all that hath been. This thing is not from Me, but from One Who is Almighty and All-Knowing. And He bade Me lift up My voice between earth and heaven, and for this there befell Me what hath caused the tears of every man of understanding to flow. The learning current amongst men I studied not; their schools I entered not. Ask of the city wherein I dwelt, that thou mayest be well assured that I am not of them who speak falsely. This is but a leaf which the winds of the will of thy Lord, the Almighty, the All-Praised, have stirred. Can it be still when the tempestuous winds are blowing? Nay, by Him Who is the Lord of all Names and Attributes! They move it as they list. The evanescent is as nothing before Him Who is the Ever-Abiding. His all-compelling summons hath reached Me, and caused Me to speak His praise amidst all people. I was indeed as one dead when His behest was uttered. The hand of the will of thy Lord, the Compassionate, the Merciful, transformed Me. Can anyone speak forth of his own accord that for which all men, both high and low, will protest against him? Nay, by Him Who taught the Pen the eternal mysteries, save him<a name="p40"/> whom the grace of the Almighty, the All-Powerful, hath strengthened.
 	</td>
 	<td rowspan="2" VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["O King!..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p21">p. 21</a>;vol. 2, <a href="../../Others/ROB/V2/p337-369Ch16.html#p346">p. 346</a> ; vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p374">p. 374</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán"><i>Lawh-i-Sultán</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">39</DIV></center></small></td>
 </tr>
@@ -2304,7 +2307,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	<hr>
 	[Lawh-i-Fu'ád] <i>The Revelation of Bahá'u'lláh</i> <a href="../../Others/ROB/V3/p467-483Index.html#Lawh-i-Fu'ád">vol. 3</a><p>
 	[Tablet to Napoleon III] <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../../Others/ROB/V3/p108-132Ch06.html#p110">p. 110</a><p>
-	<i>'Neither is there a thing green or sere, but it is noted in a distinct writing.' Qur'án</i> 6:59. See vol. 3, pp. <a href="../../Others/ROB/V3/p221-252Ch11.html#p245">245</a>-6. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#150">Appendix III</a>)
+	<i>'Neither is there a thing green or sere, but it is noted in a distinct writing.'</i> <a href="../../../CLUI/UnifiedIndex.html#Qur'án6:59"><i>Qur'án</i> 6:59</a>. See vol. 3, pp. <a href="../../Others/ROB/V3/p221-252Ch11.html#p245">245</a>-6. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#150">Appendix III</a>)
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">150</DIV></center></small></td>
 </tr>
