--- a/Baha'i/Baha/EW/Introduction.html
+++ b/Baha'i/Baha/EW/Introduction.html
@@ -70,14 +70,14 @@
 </tr>
 <tr>
        <td><a name="para5"/>
-	   Man is showing by his acts that he has lost God and in consequence has also lost himself. "And be ye not like those," the Qur'án warns, "who forget God, and whom He hath therefore caused to forget their own selves." (59:19). Man is bewildered--straying in a wilderness. He must find the meaning in the universe again, and this meaning is God as expressed by the Prophet; then he will rediscover his own self, the reflection of the meaning; then he will have a way of life in keeping with the facts and will consciously follow it.
+	   Man is showing by his acts that he has lost God and in consequence has also lost himself. "And be ye not like those," the Qur'án warns, "who forget God, and whom He hath therefore caused to forget their own selves." (<a href="../../../CLUI/UnifiedIndex.html#Qur'án59:19">59:19</a>). Man is bewildered--straying in a wilderness. He must find the meaning in the universe again, and this meaning is God as expressed by the Prophet; then he will rediscover his own self, the reflection of the meaning; then he will have a way of life in keeping with the facts and will consciously follow it.
 	   </td>
        <td>&nbsp;</td>
        <td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
        <td><a name="para6"/>
-	   A seventeen year old boy is referred to in this book. He was a troublesome youth and his father was worried about him. Then Bahá'u'lláh, imprisoned in the barracks at 'Akká, summoned him. Following their interview, the boy, alone and on foot, carried to Persia Bahá'u'lláh's Tablet to the Sháh. He reached the capital after a four months' journey; he fasted, prayed, and waited on a rock until he saw the Sháh and his suite going hunting in the direction of the hill villages north of Tihrán. He approached them and called out in Arabic: "O King! I have come to thee from Sheba with a weighty message." (This is what the lapwing said to Solomon when it returned from seeing Balkis on her golden throne: Qur'án 27:22.) The Tablet was taken from the boy and delivered to the priests. They read it, and recommended that the boy be put to death. The executioners branded him with hot irons for three days; a photograph, taken of him under torture, is extant. Then they beat his head to a pulp with a rifle butt and threw his body down a hole. 
+	   A seventeen year old boy is referred to in this book. He was a troublesome youth and his father was worried about him. Then Bahá'u'lláh, imprisoned in the barracks at 'Akká, summoned him. Following their interview, the boy, alone and on foot, carried to Persia Bahá'u'lláh's Tablet to the Sháh. He reached the capital after a four months' journey; he fasted, prayed, and waited on a rock until he saw the Sháh and his suite going hunting in the direction of the hill villages north of Tihrán. He approached them and called out in Arabic: "O King! I have come to thee from Sheba with a weighty message." (This is what the lapwing said to Solomon when it returned from seeing Balkis on her golden throne: <a href="../../../CLUI/UnifiedIndex.html#Qur'án27:22">Qur'án 27:22</a>.) The Tablet was taken from the boy and delivered to the priests. They read it, and recommended that the boy be put to death. The executioners branded him with hot irons for three days; a photograph, taken of him under torture, is extant. Then they beat his head to a pulp with a rifle butt and threw his body down a hole. 
 	   </td>
        <td>&nbsp;</td>
        <td VALIGN=middle><small><center><a name="piii">iii</a></center><p></small></td>
@@ -241,7 +241,7 @@
 </tr>
 <tr>
        <td><a name="para26"/>
-	   Some of the terminology will be familiar only to students of Islámics, for the Bahá'í Faith comes out of Islám as Christianity comes out of Judaism. <a name="HillAndHaram"/>For example the Arabic verse on <a href="p001-182.html#p17">p. 17</a> contrasts the Sanctuary (Haram), the sacred place where no blood may be shed, with the place outside the Sanctuary (Hill) where the shedding of blood is not unlawful, and refers to Bahá'u'lláh's willingness to sacrifice His life anywhere and under any conditions. Or there is reference to the <a name="Sadratu'l-Muntahá"/>Sadratu'l-Muntahá. This is the "Divine Lote-Tree," the "Sidrah Tree, which marks the boundary," the "Lote-Tree of the extremity," the "Tree beyond which neither men nor angels can pass," and which stands in the Seventh Heaven, the highest Paradise, at the right hand of the Throne of God. Reference to it occurs obliquely in Qur'án 53:9 and directly in 53:14, and the two visions there described are traditionally related to Muhammad's Vision of the Ascension or Mi'ráj (cf. Súrih 17:1). In Bahá'í writings this Tree symbolizes the Prophet or Manifestation of God.
+	   Some of the terminology will be familiar only to students of Islámics, for the Bahá'í Faith comes out of Islám as Christianity comes out of Judaism. <a name="HillAndHaram"/>For example the Arabic verse on <a href="p001-182.html#p17">p. 17</a> contrasts the Sanctuary (Haram), the sacred place where no blood may be shed, with the place outside the Sanctuary (Hill) where the shedding of blood is not unlawful, and refers to Bahá'u'lláh's willingness to sacrifice His life anywhere and under any conditions. Or there is reference to the <a name="Sadratu'l-Muntahá"/>Sadratu'l-Muntahá. This is the "Divine Lote-Tree," the "Sidrah Tree, which marks the boundary," the "Lote-Tree of the extremity," the "Tree beyond which neither men nor angels can pass," and which stands in the Seventh Heaven, the highest Paradise, at the right hand of the Throne of God. Reference to it occurs obliquely in <a href="../../../CLUI/UnifiedIndex.html#Qur'án53:9">Qur'án 53:9</a> and directly in 53:14, and the two visions there described are traditionally related to Muhammad's Vision of the Ascension or Mi'ráj (cf. Súrih 17:1). In Bahá'í writings this Tree symbolizes the Prophet or Manifestation of God.
 	   </td>
        <td>&nbsp;</td>
        <td VALIGN=middle><small><center><a name="pxiv">xiv</a></center><p></small></td>
@@ -255,7 +255,7 @@
 </tr>
 <tr>
        <td><a name="para28"/>
-	   The Súrih of Tawhíd, called "The Unity," is Súrih 112 of the Qur'án.
+	   The Súrih of Tawhíd, called "The Unity," is Súrih <a href="../../../CLUI/UnifiedIndex.html#Qur'án112">112</a> of the Qur'án.
 	   </td>
        <td>&nbsp;</td>
        <td VALIGN=top>&nbsp;</td>
@@ -311,7 +311,7 @@
 </tr>
 <tr>
        <td><a name="para36"/>
-	   "Verses concerning the Divine Presence," referred to on <a href="p001-182.html#p115">p. 115</a> and elsewhere, are numerous in the Qur'án. Among them are these: Súrih 39:69: "And the earth shall shine with the light [núr] of her Lord, and the Book shall be set, and the prophets shall be brought up, and the witnesses...and none shall be wronged." 89:22-23: "...when the earth shall be crushed with crushing, crushing, And thy Lord shall come and the angels rank on rank..." 83:6: "The day when mankind shall stand before the Lord of the worlds." 20:107,110: "On that day shall men follow their summoner...and low shall be their voices before the God of Mercy, nor shalt thou hear aught but the light footfall...And humble shall be their faces before Him that Liveth..."
+	   "Verses concerning the Divine Presence," referred to on <a href="p001-182.html#p115">p. 115</a> and elsewhere, are numerous in the Qur'án. Among them are these: Súrih 39:69: "And the earth shall shine with the light [núr] of her Lord, and the Book shall be set, and the prophets shall be brought up, and the witnesses...and none shall be wronged." 89:22-23: "...when the earth shall be crushed with crushing, crushing, And thy Lord shall come and the angels rank on rank..." <a href="../../../CLUI/UnifiedIndex.html#Qur'án83:6">83:6</a>: "The day when mankind shall stand before the Lord of the worlds." 20:107,110: "On that day shall men follow their summoner...and low shall be their voices before the God of Mercy, nor shalt thou hear aught but the light footfall...And humble shall be their faces before Him that Liveth..."
 	   </td>
        <td>&nbsp;</td>
        <td VALIGN=middle><small><center><a name="pxvi">xvi</a></center><p></small></td>
@@ -346,14 +346,14 @@
 </tr>
 <tr>
        <td><a name="para41"/>
-	   The Great Announcement, <a href="p001-182.html#p143">p. 143</a>, refers to Qur'án 78:1-2 and 38:67: an-Nabáu'l-'Azím.
+	   The Great Announcement, <a href="p001-182.html#p143">p. 143</a>, refers to Qur'án 78:1-2 and <a href="../../../CLUI/UnifiedIndex.html#Qur'án38:67">38:67</a>: an-Nabáu'l-'Azím.
 	   </td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center><a name="pxvii">xvii</a></center><p></small></td>
 </tr>
 <tr>
        <td><a name="para42"/>
-	   "He maketh the morning darkness," (Amos 4:12-13) on <a href="p001-182.html#p146">p. 146</a>, refers to the fact that Mírzá Yahyá, known as Subh-i-Azal--the Morning of Eternity--denied the Manifestation and betrayed Him. 
+	   "He maketh the morning darkness," (Amos 4:12-<a href="../../../CLUI/UnifiedIndex.html#BibleAmos4:13">13</a>) on <a href="p001-182.html#p146">p. 146</a>, refers to the fact that Mírzá Yahyá, known as Subh-i-Azal--the Morning of Eternity--denied the Manifestation and betrayed Him. 
 	   </td>
        <td>&nbsp;</td>
        <td VALIGN=top>&nbsp;</td>
@@ -388,7 +388,7 @@
 </tr>
 <tr>
        <td><a name="para47"/>
-	   The Mawlavís are an order of whirling dervishes, founded by Jalál-i-Dín Rúmí, 1207-1273 A.D. For Khidr, a name which means green, see traditions concerning Qur'án, 18:64. In Islám he is the discoverer and custodian of the water of life, and symbol of the True Guide. Rukn is the Black Stone set in the wall of the Ka'bih, the cube-shaped building at Mecca which is the chief object of pilgrimage of the Muslim world. The Maqám or Station of Abraham is near the Ka'bih. Cf. Qur'án 2:119: "Take ye the station of Abraham for a place of prayer"; and again 3:90-91: "The first Temple that was founded for mankind, was that in Becca (i.e., Mecca)...In it are evident signs, even the standing-place of Abraham: and he who entereth it is safe." These last four references will be found on pages <a href="p001-182.html#p164">164</a>, <a href="p001-182.html#p179">179</a>, and <a href="p001-182.html#p181">181</a> of this text. 
+	   The Mawlavís are an order of whirling dervishes, founded by Jalál-i-Dín Rúmí, 1207-1273 A.D. For Khidr, a name which means green, see traditions concerning Qur'án, 18:64. In Islám he is the discoverer and custodian of the water of life, and symbol of the True Guide. Rukn is the Black Stone set in the wall of the Ka'bih, the cube-shaped building at Mecca which is the chief object of pilgrimage of the Muslim world. The Maqám or Station of Abraham is near the Ka'bih. Cf. Qur'án 2:119: "Take ye the station of Abraham for a place of prayer"; and again 3:90-<a href="../../../CLUI/UnifiedIndex.html#Qur'án3:91">91</a>: "The first Temple that was founded for mankind, was that in Becca (i.e., Mecca)...In it are evident signs, even the standing-place of Abraham: and he who entereth it is safe." These last four references will be found on pages <a href="p001-182.html#p164">164</a>, <a href="p001-182.html#p179">179</a>, and <a href="p001-182.html#p181">181</a> of this text. 
 	   </td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center><a name="pxviii">xviii</a></center><p></small></td>
