--- a/Baha'i/Baha/KA/p019-088Aqdas.html
+++ b/Baha'i/Baha/KA/p019-088Aqdas.html
@@ -246,7 +246,6 @@
 	 	 <td VALIGN=top><small>
 		 <hr>
 		 Note <a href="p165-251Notes.html#note42">42</a><p>
-		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#HouseofJustice">Seat of Justice</a>]
 		 </small>
 		 <td>&nbsp;</td>
 	 </tr>
@@ -258,7 +257,6 @@
 	 	 <td VALIGN=top><small>
 		 <hr>
 		 Note <a href="p165-251Notes.html#note42">42</a><p>
-		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#HouseofJustice">Seat of Justice</a>]
 		 </small>
 		 <td>&nbsp;</td>
 		 <td>&nbsp;</td>
@@ -1293,7 +1291,7 @@
 		 <a href="../../../CLUI/UnifiedIndex.html#MostGreatPrison">Most Great Prison</a>,<br>
 		 <a href="../../../CLUI/UnifiedIndex.html#Concourseonhigh">Concourse on high</a>,<br>
 		 <a href="../../../CLUI/UnifiedIndex.html#Veils">Veil(s)</a><br>
-		 }
+		 ]
 		 </small></td>
 		 <td>&nbsp;</td>
 	 </tr>
@@ -1331,7 +1329,7 @@
 		 [CLUI: <br>
 		 <a href="../../../CLUI/UnifiedIndex.html#Báb,TheHeraldofBahá'u'lláh">My Forerunner</a>,<br>
 		 <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláhTitlesPenoftheMostHigh">Pen of the Most High</a><br>
-		 }
+		 ]
 		 </small></td>
 	 	 <td VALIGN=top><br><small><center><DIV TITLE="Page number location is approximate">68</DIV></center></small></td>
    </tr>
@@ -1352,7 +1350,7 @@
 		 </td>
 	 	 <td VALIGN=top><small>
 		 <hr>
-		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláhPromisedOneofAllAges">Messengers of old</a>}
+		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláhPromisedOneofAllAges">Messengers of old</a>]
 		 </small></td>
 	 	 <td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">69</DIV></center></small></td>
    </tr>
