--- a/Baha'i/Baha/KA/p089-102Supp.html
+++ b/Baha'i/Baha/KA/p089-102Supp.html
@@ -407,7 +407,7 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	<hr>
 	["And in a prayer..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p029-054Ch02.html#p36">p. 36</a>
 	</small></td>
-	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">101</DIV></center></small></td>
+	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">101</DIV></center></small></td>
 </tr>
 <tr>
 	<td><a name="para32"/>
@@ -449,7 +449,7 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	<td VALIGN=top><small>
 	&nbsp;
 	</small></td>
-	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">41</DIV></center><p></small></td>
+	<td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
 	<td><a name="para68"></a>
@@ -461,7 +461,7 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	<hr>
 	["Alláh-u-Abhá" is said once; then the first of the six verses is recited nineteen times. Then "Alláh-u-Abhá" is said again, followed by the second verse, which is recited nineteen times, and so on. <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers/bahai-prayers-full-diacritics.docx?f011de12">bahai.org</a> 2021]
 	</small></td>
-	<td VALIGN=top rowspan="2">&nbsp;</td>
+	<td VALIGN=middle rowspan="2"><small><center><DIV TITLE="Page number location is approximate">102</DIV></center><p></small></td>
 </tr>
 <tr>
 	<td><a name="para69"></a>
