--- a/Baha'i/Baha/KA/p103-140QA.html
+++ b/Baha'i/Baha/KA/p103-140QA.html
@@ -840,7 +840,7 @@ Q63 - left rak'ahs as in printed version (not rak’áhs)
 		QUESTION:  <i>Concerning the Prayer for the Dead:  should it precede or follow the interment?  And is facing the Qiblih required?</i><p>
 		ANSWER:  Recital of this prayer should precede interment; and as regards the Qiblih:  "Whichever way ye turn, there is the face of God."*<p>
 	</td>
-	<td VALIGN=top><small>* Qur'án 2:115</small>
+	<td VALIGN=top><small>* <a href="../../../CLUI/UnifiedIndex.html#Qur'án2:115">Qur'án 2:115</a></small>
 	<hr><small>Notes <a href="p165-251Notes.html#note10">10</a>, <a href="p165-251Notes.html#note19">19</a>
 	</td>	
 	<td>&nbsp;</td>
