--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -537,7 +537,12 @@ Note 108 - fixed quote from God Passes By (remove 'as')
   	  <hr>
 	  <small><i>The Hidden Words</i>, <a href="../HiddenWords.html#arabic26">Arabic #26</a><p>
 	  <i>The Hidden Words</i>, <a href="../HiddenWords.html#arabic27">Arabic #27</a><p>
-  	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Backbiting">Backbiting</a>]
+	  ["Verily I say, the tongue...] <i>Tablets of Bahá'u'lláh</i> <a href="../TOB/p001-270TOB.html#para590">p. 220</a><p>
+	  
+  	  [CLUI:<br>
+	  <a href="../../../CLUI/UnifiedIndex.html#Backbiting">Backbiting</a>,<br>
+	  <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-'Ahdí"><i>Kitáb-i-'Ahdí</i></a><br>
+	  ]
 	  </small>
 	  </td>
 	  <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">182</DIV></center><p></small></td>
@@ -619,7 +624,10 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  </td>
 	  <td VALIGN=TOP><small>
 	  <hr>
-	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#KAoninheritance">Inheritance</a>]
+	  [CLUI:<br>
+	  <a href="../../../CLUI/UnifiedIndex.html#HouseofJustice">Seat of Justice</a>,<br>
+	  <a href="../../../CLUI/UnifiedIndex.html#KAoninheritance">Inheritance</a><br>
+	  ]
 	  </small>		 		 		 		 
 	  </td>
 	  <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">186</DIV></center><p></small></td>
@@ -1713,7 +1721,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  This verse establishes Huqúqu'lláh, the Right of God, the offering of a fixed portion of the value of the believer's possessions. This offering was made to Bahá'u'lláh as the Manifestation of God and then, following His Ascension, to 'Abdu'l-Bahá as the Centre of the Covenant. In His Will and Testament, 'Abdu'l-Bahá provided that the Huqúqu'lláh was to be offered <i>"through the Guardian of the Cause of God"</i>. There now being no Guardian, it is offered through the Universal House of Justice as the Head of the Faith. This fund is used for the promotion of the Faith of God and its interests as well as for various philanthropic purposes. The offering of the Huqúqu'lláh is a spiritual obligation, the fulfilment of which has been left to the conscience of each Bahá'í. While the community is reminded of the <a name="p219"/> requirements of the law of Huqúq, no believer may be approached individually to pay it.<p>
 	  A number of items in Questions and Answers further elaborate this law. The payment of Huqúqu'lláh is based on the calculation of the value of the individual's possessions. If a person has possessions equal in value to at least nineteen mithqáls of gold (<a href="p103-140QA.html#qa8">Q&A 8</a>), it is a spiritual obligation to pay nineteen percent of the total amount, once only, as Huqúqu'lláh (<a href="p103-140QA.html#qa89">Q&A 89</a>). Thereafter, whenever one's income, after all expenses have been paid, increases the value of one's possessions by the amount of at least nineteen mithqáls of gold, one is to pay nineteen percent of this increase, and so on for each further increase (Q&A <a href="p103-140QA.html#qa8">8</a>, <a href="p103-140QA.html#qa90">90</a>).<p>
 	  Certain categories of possessions, such as one's residence, are exempt from the payment of Huqúqu'lláh (Q&A <a href="p103-140QA.html#qa8">8</a>, <a href="p103-140QA.html#qa42">42</a>, <a href="p103-140QA.html#qa95">95</a>), and specific provisions are outlined to cover cases of financial loss (Q&A <a href="p103-140QA.html#qa44">44</a>, <a href="p103-140QA.html#qa45">45</a>), the failure of investments to yield a profit (<a href="p103-140QA.html#qa102">Q&A 102</a>) and for the payment of Huqúq in the event of the person's death (Q&A <a href="p103-140QA.html#qa9">9</a>, <a href="p103-140QA.html#qa69">69</a>, <a href="p103-140QA.html#qa80">80</a>). (In this latter case, see <a href="p165-251Notes.html#note47">note 47</a>.)<p>
-	  Extensive extracts from Tablets, <i>Questions and Answers</i>, and other Writings concerning the spiritual significance of Huqúqu'lláh and the details of its application have been published in a compilation entitled <i>Huqúqu'lláh</i>.<p>
+	  Extensive extracts from Tablets, <a href="p103-140QA.html"><i>Questions and Answers</i></a>, and other Writings concerning the spiritual significance of Huqúqu'lláh and the details of its application have been published in a compilation entitled <i>Huqúqu'lláh</i>.<p>
 	  </td>
 	  <td VALIGN=TOP>
 	  <small><hr>	 
@@ -2452,6 +2460,9 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  </td>
 	  <td VALIGN=top>
 	  <hr><small>
+	  ["people of the Qur'án..."] <i>The Kitáb-i-Íqán</i>, <a href="../KI/p095-258.html#para135">p. 213</a><p>
+	  ["to obscure their understanding..."] <i>The Kitáb-i-Íqán</i>, <a href="../KI/p095-258.html#para71">p. 162</a><p>
+	  ["this theme hath..."] <i>The Kitáb-i-Íqán</i>, <a href="../KI/p095-258.html#para72">p. 162</a><p>
 	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#SealoftheProphets">Seal of the Prophets</a>]
 	  </small>
 	  </td>
@@ -2474,7 +2485,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  <td>
 	  <b><a name="note182"/>182. Call ye to mind Karím <a href="p019-088Aqdas.html#para170">&para;170</a></b><p>
 	  Hájí Mírzá Muhammad Karím Khán-i-Kirmání (1810- circa 1873) was the self-appointed leader of the Shaykhí community after the death of Siyyid Kázim, who was the appointed successor to Shaykh Ahmad-i-Ahsá'í (see notes <a href="#note171">171</a> and <a href="#note172">172</a>). He dedicated himself to the promotion of the teachings of Shaykh Ahmad. The opinions he expressed became the subject of controversy among his supporters and opponents alike.<p>
-	  Regarded as one of the leading savants and prolific authors of his age, he composed numerous books and epistles in the various fields of learning that were cultivated <a name="p245"/> in those times. He actively opposed both the Báb and Bahá'u'lláh, and used his treatises to attack the Báb and His Teachings. In the Kitáb-i-Íqán, Bahá'u'lláh condemns the tone and content of his writings and singles out for criticism one of his works which contains negative allusions to the Báb. Shoghi Effendi describes him as "inordinately ambitious and hypocritical" and describes how he "at the special request of the Sháh had in a treatise viciously attacked the new Faith and its doctrines".<p>
+	  Regarded as one of the leading savants and prolific authors of his age, he composed numerous books and epistles in the various fields of learning that were cultivated <a name="p245"/> in those times. He actively opposed both the Báb and Bahá'u'lláh, and used his treatises to attack the Báb and His Teachings. In the <a href="../KI/p095-258.html#para101">Kitáb-i-Íqán</a>, Bahá'u'lláh condemns the tone and content of his writings and singles out for criticism one of his works which contains negative allusions to the Báb. Shoghi Effendi describes him as "inordinately ambitious and hypocritical" and describes how he "at the special request of the Sháh had in a treatise viciously attacked the new Faith and its doctrines".<p>
 	  </td>
 	  <td VALIGN=top>
 	  <hr><small>
