--- a/Baha'i/Baha/KI/p259-270GlossaryAndNotes.html
+++ b/Baha'i/Baha/KI/p259-270GlossaryAndNotes.html
@@ -146,7 +146,7 @@
 <tr>
 	  <td>
 	  <b>Báb</b>: The Qá'im and Mihdí of Islám, and the Forerunner of Bahá'u'lláh. (Birth of the Báb: October 20, 1819<sup>*</sup>; His Martyrdom: July 9, 1850).
-	  <blockquote><small>[Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after Naw-Rúz." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a></small></blockquote>
+	  <blockquote><small>* [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after Naw-Rúz." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a></small></blockquote>
 	  </td>
 	  <td VALIGN=top><small>	  
 	  </small></td>
