--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -1257,7 +1257,7 @@
 	O Hádí! Thou hast not been in Our company, thou art therefore ignorant of the Cause. Act not according to thine idle imaginings. Aside from these things, scrutinize the Writings with thine own eyes and ponder upon that which hath come to pass. Have pity upon thyself and upon the servants of God and be not the cause of waywardness like unto the people aforetime. The path is unmistakable and the proof is evident. Change injustice into justice and inequity into equity. We cherish the hope that the breaths of divine inspiration may strengthen thee and that thine inner ear may be enabled to hear the blessed words: 'Say, it is God, then leave them to entertain themselves with their cavillings.' <sup><small>1</small></sup> Thou hast been there (Cyprus) and hast seen him (Mírzá Yahyá). Now speak forth with fairness. Do not misrepresent the matter, neither to thyself nor to the people. Thou art both ignorant and uninformed. Give ear unto the Voice of this Wronged One and hasten towards the ocean of divine knowledge that perchance thou mayest be adorned with the ornament of comprehension and <a name="p44"/>mayest renounce all else but God. Hearken unto the Voice of this benevolent Counselor, calling aloud, unveiled and manifest, before the faces of kings and their subjects, and summon the people of the world, one and all, unto Him Who is the Lord of Eternity. This is the Word from Whose horizon the day-star of unfailing grace shineth resplendent.
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 6:91.
+	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án6:91">Qur'án 6:91</a>.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">44</DIV></center><p></small></td>
 </tr>
@@ -2858,7 +2858,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. i.e., the letter 'B', the second letter of the alphabet.<p>
-	2. The opening chapter of the Qur'án, which begins with the letter 'B': Bismi'lláhi'r-Rahmáni'r-Rahím (In the Name of God, the Compassionate, the Merciful). This chapter of the Qur'án was revealed twice, once in Mecca and once in Medina.
+	2. The <a href="../../../CLUI/UnifiedIndex.html#Qur'ánSúrih1">opening chapter of the Qur'án</a>, which begins with the letter 'B': Bismi'lláhi'r-Rahmáni'r-Rahím (In the Name of God, the Compassionate, the Merciful). This chapter of the Qur'án was revealed twice, once in Mecca and once in Medina.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">102</DIV></center><p></small></td>
 </tr>
@@ -2984,7 +2984,7 @@
 	O thou who hast set thy face towards the Realm on High and hast quaffed My sealed wine from the hand of bounteousness! Know thou that the term 'Infallibility' hath numerous meanings and diverse stations. In one sense it is applicable to the One Whom God hath made immune from error. Similarly it is applied to every soul whom God hath guarded against sin, transgression, rebellion, impiety, disbelief and the like. However, the Most Great Infallibility is confined to the One Whose station is immeasurably exalted beyond ordinances or prohibitions and is sanctified from errors and omissions. Indeed He is a Light which is not followed by darkness and a Truth not overtaken by error. Were He to pronounce water to be wine or heaven to be earth or light to be fire, He speaketh the truth and no doubt would there be about it; and unto no one is given the right to question His authority or to say why or wherefore. Whosoever raiseth objections will be numbered with the froward in the Book of God, the Lord of the worlds. 'Verily He shall not be asked of His doings but all others shall be asked of their doings.' <sup><small>1</small></sup> He is come from the invisible heaven, bearing the banner 'He doeth whatsoever He willeth' and is accompanied by hosts of power and authority while it is the duty of all besides Him to strictly observe whatever laws and ordinances have been enjoined upon them, and should anyone deviate therefrom, even to the extent of a hair's breadth, his work would be brought to naught.
 	</td>
 	<td VALIGN=top><small>
-	1. cf. Qur'án 21:23.
+	1. cf. <a href="../../../CLUI/UnifiedIndex.html#Qur'án21:23">Qur'án 21:23</a>.
 	<hr>
 	[Most Great Infallibility] <i>The Kitab-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para47">&para;47</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p105-152Ch09.html#p133">p. 133</a>; vol. 2 <a href="../../Others/ROB/V2/p236-269Ch11.html#p262">p. 262</a>; vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p300">p. 300</a>; vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html#p149">p. 149</a>
 	</small></td>
@@ -2996,7 +2996,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Mecca.<p>
-	2. Qur'án 3:91.<p>
+	2. <a href="../../../CLUI/UnifiedIndex.html#Qur'án3:91">Qur'án 3:91</a>.<p>
 	3. Muhammad.
 	<hr>
 		[Fast] <a href="../KA/p258-296Index.html#Fasting"><i>The Kitáb-i-Aqdas</i></a>; <i>The Kitáb-i-Íqán</i>, <a href="../KI/p001-094.html#para39">p. 39</a>-40; <a href="../PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p397-421Ch19.html#p397">p. 397</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../../Others/ROB/V4/p001-010Ch01.html#p9">p. 9</a>
@@ -3117,9 +3117,9 @@
 	</td>
 	<td VALIGN=top rowspan="2"><small>
 	1. Muhammad.<p>
-	2. Qur'án 83:6.<p>
+	2. <a href="../../../CLUI/UnifiedIndex.html#Qur'án83:6">Qur'án 83:6</a>.<p>
 	3. Moses.<p>
-	4. Qur'án 14:5.<p>
+	4. <a href="../../../CLUI/UnifiedIndex.html#Qur'án14:5">Qur'án 14:5</a>.<p>
 	5. Jesus.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">115</DIV></center></small></td>
@@ -5154,7 +5154,7 @@
 	Thou hast inquired about the warning We gave to the people at the time of Our departure from 'Iráq to the effect that when the Sun disappeareth from sight, birds of darkness will be in motion and the standards of Samírí <sup><small>1</small></sup> will be reared high. I swear by God! Those birds have stirred in these days and Samírí hath raised his clamor. Well is it with him who recognizeth and is numbered with men of understanding. We have also warned them against the appearance of the calf. God is My witness! All Our warnings have come to pass, as indeed, they are bound to, inasmuch as they have issued from the fingers of glory and might. Beseech thou God to protect thee from the mischief of these men and to purify thee from the insinuations of the froward. Strengthen thy loins then for the promotion of the Cause and pay no attention unto the words uttered by the people of the Bayán, for they are truly incapable of understanding and have failed to comprehend the essence of the Cause as is revealed in this august, this Most Great Announcement. Thus have We inspired thee, and infused into thy heart that which will make thee independent of the allusions of mankind.
 	</td>
 	<td VALIGN=top><small>
-	1. The maker of the Golden Calf. See Qur'án 20:87-98.
+	1. The maker of the Golden Calf. See <a href="../../../CLUI/UnifiedIndex.html#Qur'án20:87-98">Qur'án 20:87-98</a>.
 	<hr>
 	["There is another subject..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p205-213Ch14.html#p211">p. 211</a>
 	</small></td>
@@ -5481,7 +5481,7 @@
 	</td>
 	<td rowspan="2" VALIGN=top><small>
 	1. Jesus.<p>
-	2. The Sacred Lote-Tree, the Tree beyond which there is no passing (See Qur'án 53:8-18). A symbol of the Manifestation of God. (See <i>God Passes By</i> <a href="../../SE/GPB/p087-234SecondPeriod.html#para15">p. 94</a>.)
+	2. The Sacred Lote-Tree, the Tree beyond which there is no passing (See Qur'án 53:8, <a href="../../../CLUI/UnifiedIndex.html#Qur'án53:9">9</a>, 10-18). A symbol of the Manifestation of God. (See <i>God Passes By</i> <a href="../../SE/GPB/p087-234SecondPeriod.html#para15">p. 94</a>.)
 	<hr>
 	["O foolish one!..."] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para136">p. 83</a>;<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p091-102Ch06.html#p95">p. 95</a><p>
 	["Open thine eyes..."] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para136">p. 83</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p091-102Ch06.html#p96">p. 96</a><p>
@@ -5636,7 +5636,7 @@
 	Although the Realm of Glory hath none of the vanities of the world, yet within the treasury of trust and resignation We have bequeathed to Our heirs an excellent and priceless Heritage. Earthly treasures We have not bequeathed, nor have We added such cares as they entail. By God! In earthly riches fear is hidden and peril is concealed. Consider ye and call to mind that which the All-Merciful hath revealed in the Qur'án: 'Woe betide every slanderer and defamer, him that layeth up riches and counteth them.' <sup><small>1</small></sup> Fleeting are the riches of the world; all that perisheth and changeth is not, and hath never been, worthy of attention, except to a recognized measure.
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 104:1-2.<p>
+	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án104:1-2">Qur'án 104:1-2</a>.<p>
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p073-086Ch04.html#p81">p. 81</a>
 	</small></td>
@@ -6737,7 +6737,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Psalms 59:9; 108:10.<p>
-	2. Qur'án 14:5.
+	2. <a href="../../../CLUI/UnifiedIndex.html#Qur'án14:5">Qur'án 14:5</a>.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">259</DIV></center><p></small></td>
 </tr>
