--- a/Baha'i/Baha/TSVATFV.html
+++ b/Baha'i/Baha/TSVATFV.html
@@ -482,7 +482,7 @@
 	   <td VALIGN=top>
 	   <small>
    	   4. Sermon by 'Alí.<p>
-	   5. Qur'án 2:282.<p>
+	   5. <a href="../../CLUI/UnifiedIndex.html#Qur'án2:282">Qur'án 2:282</a>.<p>
 	   6. Qur'án 16:71.
 	   </small></td>
        <td>&nbsp;</td>
@@ -520,7 +520,7 @@
 	   <td VALIGN=top>
 	   <small>
 	   7. The holy Sanctuary at Mecca.  Here the word means "goal."<p>
-	   8. Qur'án 29:69:  "And whoso maketh efforts for Us, in Our ways will We guide them."<p>
+	   8. <a href="../../CLUI/UnifiedIndex.html#Qur'án29:69">Qur'án 29:69</a>:  "And whoso maketh efforts for Us, in Our ways will We guide them."<p>
 	   <hr>
 	   [CLUI: <a href="../../CLUI/UnifiedIndex.html#TSV1Search">The Valley of Search</a>]	   
 	   </small>
@@ -792,7 +792,7 @@
 	   <td VALIGN=top>
 	   <small>
 	   18. Qur'án 67:3.<p>
-   	   19. Qur'án 41:53.	   
+   	   19. <a href="../../CLUI/UnifiedIndex.html#Qur'án41:53">Qur'án 41:53</a>.
 	   </small>
 	   </td>
 	   <td VALIGN=middle><center><small><DIV TITLE="Page number location is approximate">13</DIV></small></center></td>
@@ -844,7 +844,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   20. Qur'án 57:3.<p>
+	   20. <a href="../../CLUI/UnifiedIndex.html#Qur'án57:3">Qur'án 57:3</a>.<p>
 	   21. Saying attributed to 'Alí.	   
 	   </small>
 	   </td>
@@ -920,7 +920,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   25. Qur'án 2:151.	   
+	   25. <a href="../../CLUI/UnifiedIndex.html#Qur'án2:151">Qur'án 2:151</a>.	   
 	   </small>
 	   </td>
        <td>&nbsp;</td>
@@ -943,7 +943,7 @@
 	   <small>
    	   16. Jalálu'd-Dín Rúmí (1207-1273 A.D.); The <i>Mathnaví</i>.  Jalálu'd-Dín, called Mawláná ("our Master"), is the greatest of all Persian Súfí poets, and founder of the Mawlaví "whirling" dervish order.<p>
 	   26. Qur'án 4:80.<p>
-   	   27. Qur'án 18:37.
+   	   27. <a href="../../CLUI/UnifiedIndex.html#Qur'án18:37">Qur'án 18:37</a>.
 	   <hr>
 	   [CLUI: <a href="../../CLUI/UnifiedIndex.html#TSV4Unity">The Valley of Unity</a>]
 	   </small>
@@ -1190,7 +1190,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   34. Qur'án 57:3.	   
+	   34. <a href="../../CLUI/UnifiedIndex.html#Qur'án57:3">Qur'án 57:3</a>.<p>
 	   </small>
 	   </td>
 	   <td VALIGN=top><center><small><DIV TITLE="Page number location is approximate">27</DIV></small></center></td>
@@ -1535,7 +1535,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   43. Qur'án 76:5.<p>
+	   43. <a href="../../CLUI/UnifiedIndex.html#Qur'án76:5">Qur'án 76:5</a>.<p>
 	   44. Muhammad.	   
 	   </small>
 	   </td>
@@ -1887,7 +1887,7 @@
 	   <td VALIGN=top>
 	   <small>
 	   3. Persian proverb describing a man who gives up easily. As used here one connotation is that the Shaykh might have considered his station as a mystic leader compromised by the fact of his being taught the new truth by Bahá'u'lláh.<p>
-	   4. Qur'án 41:30.	   
+	   4. <a href="../../CLUI/UnifiedIndex.html#Qur'án41:30">Qur'án 41:30</a>.	   
 	   </small>	   
 	   </td>
 	   <td VALIGN=top><center><small><DIV TITLE="Page number location is approximate">48</DIV></small></center></td>
@@ -2057,7 +2057,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   13. Qur'án 41:53.	   
+	   13. <a href="../../CLUI/UnifiedIndex.html#Qur'án41:53">Qur'án 41:53</a>.
 	   </small>
 	   </td>
 	   <td VALIGN=top><center><small><DIV TITLE="Page number location is approximate">51</DIV></small></center></td>
@@ -2107,7 +2107,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   17. Qur'án 59:19.	   
+	   17. <a href="../../CLUI/UnifiedIndex.html#Qur'án59:19">Qur'án 59:19</a>.	   
 	   </small>
 	   </td>
        <td>&nbsp;</td>
@@ -2177,7 +2177,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   22. Qur'án 2:282.<p>
+	   22. <a href="../../CLUI/UnifiedIndex.html#Qur'án2:282">Qur'án 2:282</a>.<p>
 	   23. Hadíth.	   
 	   </small>
 	   </td>
@@ -2202,7 +2202,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   25. Qur'án 2:151.	   
+	   25. <a href="../../CLUI/UnifiedIndex.html#Qur'án2:151">Qur'án 2:151</a>.	   
 	   </small>
 	   </td>
        <td>&nbsp;</td>
@@ -2348,7 +2348,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   33. From Qur'án 18:37.	   
+	   33. From <a href="../../CLUI/UnifiedIndex.html#Qur'án18:37">Qur'án 18:37</a>.   
 	   </small>
 	   </td>
        <td>&nbsp;</td>
@@ -2518,7 +2518,7 @@
 	   <td VALIGN=top>
 	   <small>
 	   44. This quotation is from one of the commentators on Qur'án 55:29.  Cf. the dictionary <i>Lisánu'l-'Arab</i>.<p>
-	   45. Qur'án 55:29.<p>
+	   45. <a href="../../CLUI/UnifiedIndex.html#Qur'án55:29">Qur'án 55:29</a>.<p>
 	   46. Qur'án 6:79.<p>
 	   47. Qur'án 6:75.<p>
 	   48. Cf. Qur'án 7:105 etc., and Hadíth.	   
@@ -2691,7 +2691,7 @@
 	   </td>
 	   <td VALIGN=top>
 	   <small>
-	   58. Qur'án 37:180.	   
+	   58. <a href="../../CLUI/UnifiedIndex.html#Qur'án37:180">Qur'án 37:180</a>.	   
 	   </small>
 	   </td>
        <td>&nbsp;</td>
