--- a/Baha'i/Comp/BP/p017-206General.html
+++ b/Baha'i/Comp/BP/p017-206General.html
@@ -5448,7 +5448,7 @@
 	Far be it from me to extol Thy virtues save by what Thou hast extolled Thyself in Thy weighty Book where Thou sayest, "No vision taketh in Him, but He taketh in all vision. He is the Subtile, the All-Perceiving." <sup>1</sup> Glory be unto Thee, O my God, indeed no mind or vision, however keen or discriminating, can ever grasp the nature of the most insignificant of Thy signs. Verily, Thou art God, no God is there besides Thee. I bear witness that Thou Thyself alone art the sole expression of Thine attributes, that the praise of no one besides Thee can ever attain to Thy holy court nor can Thine attributes ever be fathomed by anyone other than Thyself. 
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 6:103
+	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án6:103">Qur'án 6:103</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">127</DIV></center><p></small></td>
 </tr>
@@ -8387,7 +8387,7 @@
 	O God, my God! Praise be unto Thee for kindling the fire of divine love in the Holy Tree on the summit of the loftiest mount: that Tree which is "neither of the East nor of the West," <sup>1</sup> that fire which blazed out till the flame of it soared upward to the Concourse on high, and from it those realities caught the light of guidance, and cried out: "Verily have we perceived a fire on the slope of Mount Sinai." <sup>2</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 24:35<br>
+	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án24:35">Qur'án 24:35</a><br>
 	2. cf. Qur'án 28:29<br>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">201</DIV></center><p></small></td>
@@ -8397,7 +8397,7 @@
 	O God, my God! Increase Thou this fire, as day followeth day, till the blast of it setteth in motion all the earth. O Thou, my Lord! Kindle the light of Thy love in every heart, breathe into men's souls the spirit of Thy knowledge, gladden their breasts with the verses of Thy oneness. Call Thou to life those who dwell in their tombs, warn Thou the prideful, make happiness worldwide, send down Thy crystal waters, and in the assemblage of manifest splendors, pass round that cup which is "tempered at the camphor fountain." <sup>3</sup>
 	</td>
 	<td VALIGN=top><small>
-	3. Qur'án 76:5
+	3. <a href="../../../CLUI/UnifiedIndex.html#Qur'án76:5">Qur'án 76:5</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
