--- a/Baha'i/Others/DBNN/p047-096Ch03.html
+++ b/Baha'i/Others/DBNN/p047-096Ch03.html
@@ -76,7 +76,7 @@ changed muadhdhín to mu'adhdhín to match glossary
 	</td>
 	<td VALIGN=top><small>
 	<a name="f2"></a><a href="p047-096Ch03-footnotes.html#f2">2.</a>	January, 22, 1844 A.D.<p>
-	<a name="f3"></a><a href="p047-096Ch03-footnotes.html#f3">3.</a>	Qur'án, 29:69. 
+	<a name="f3"></a><a href="p047-096Ch03-footnotes.html#f3">3.</a> <a href="../../../CLUI/UnifiedIndex.html#Qur'án29:69">Qur'án, 29:69</a>.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">48</DIV></center></small></td>
 </tr>
@@ -288,7 +288,7 @@ changed muadhdhín to mu'adhdhín to match glossary
     <td VALIGN=top height=1px><div class=scrollable><small>
 	<a name="f11"></a><a href="p047-096Ch03-footnotes.html#f11">11.</a>	The Báb's commentary on the <span style="background-color: #ffffCC" TITLE="Name of the chapters of the Qur'án">Súrih</span> of Joseph.  <p>
 	<a name="f12"></a><a href="p047-096Ch03-footnotes.html#f12">12.</a>	"In the first of his books he was, above all, pious and mystical; in the second, polemics and dialectics held an important place, and his listeners noticed that he unfolded, from a chapter in the Book of God which he had chosen, a new meaning which no one had heretofore perceived and especially that he drew from it doctrines and information wholly unexpected. That which one never tired of admiring was the elegance and beauty of the Arabic style used in those writings. They soon had enthusiastic admirers who did not fear to prefer them to the finest passages in the Qur'án." (Comte de Gobineau's "Les Religions et les Philosophies dans l'Asie Centrale," p. 120.)  <p>
-	<a name="f13"></a><a href="p047-096Ch03-footnotes.html#f13">13.</a>	Qur'án, 37:180.  
+	<a name="f13"></a><a href="p047-096Ch03-footnotes.html#f13">13.</a>	<a href="../../../CLUI/UnifiedIndex.html#Qur'án37:180">Qur'án, 37:180</a>.  
 	</small></div></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">63</DIV></center></small></td>
 </tr>
@@ -521,7 +521,9 @@ changed muadhdhín to mu'adhdhín to match glossary
 	<td VALIGN=top><small>
 	<a name="f21"></a><a href="p047-096Ch03-footnotes.html#f21">21.</a>	In the name of God, the Compassionate, the Merciful.  <p>
 	<a name="f22"></a><a href="p047-096Ch03-footnotes.html#f22">22.</a>	"The Lord of the Age," one of the titles of the promised Qá'im.  <p>
-	<a name="f23"></a><a href="p047-096Ch03-footnotes.html#f23">23.</a>	According to Hájí Mu'inu's-Saltanih's narrative (p. 37), the Báb assumed, at the age of twenty, the independent direction of His business affairs. "Orphaned at an early age, he was placed under the tutelage of his maternal uncle, Áqá Siyyid 'Alí, under whose direction he entered the same trade in which his father had been engaged (that is to say, the mercantile business)." (A. L. M. Nicolas' "Siyyid 'Alí-Muhammad dit le Báb," p. 189.)  
+	<a name="f23"></a><a href="p047-096Ch03-footnotes.html#f23">23.</a>	According to Hájí Mu'inu's-Saltanih's narrative (p. 37), the Báb assumed, at the age of twenty, the independent direction of His business affairs. "Orphaned at an early age, he was placed under the tutelage of his maternal uncle, Áqá Siyyid 'Alí, under whose direction he entered the same trade in which his father had been engaged (that is to say, the mercantile business)." (A. L. M. Nicolas' "Siyyid 'Alí-Muhammad dit le Báb," p. 189.)
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Qur'ánSúrih1">the opening words of the Qur'án</a>]  
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">76</DIV></center></small></td>
 </tr>
