--- a/Baha'i/Others/DBNN/p109-122Ch05-footnotes.html
+++ b/Baha'i/Others/DBNN/p109-122Ch05-footnotes.html
@@ -165,12 +165,13 @@
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">115</DIV></center></small></td>
 </tr>
-<tr class=hideRowWithNoFootnotes>
+<tr>
 	<td><a name="para10"></a><a name="p116"></a>
 	On being informed, upon their arrival in Tákúr, that Bahá'u'lláh had departed for His winter resort, the representatives of Mullá Muhammad decided to leave for that place. When they arrived, they found Bahá'u'lláh engaged in revealing a commentary on the opening <span style="background-color: #ffffCC" TITLE="Name of the chapters of the Qur'án">Súrih</span> of the Qur'án, entitled "The Seven Verses of Repetition." As they sat and listened to His discourse, the loftiness of the theme, the persuasive eloquence which characterised its presentation, as well as the extraordinary manner of its delivery, profoundly impressed them. Mullá Abbás, unable to contain himself, arose from his seat and, urged by an impulse he could not resist, walked back and stood still beside the door in an attitude of reverent submissiveness. The charm of the discourse to which he was listening had fascinated him. "You behold my condition," he told his companion as he stood trembling with emotion and with eyes full of tears. "I am powerless to question Bahá'u'lláh. The questions I had planned to ask Him have vanished suddenly from my memory. You are free either to proceed with your enquiry or to return alone to our teacher and inform him of the state in which I find myself. Tell him from me that Abbás can never again return to him. He can no longer forsake this threshold." Mírzá Abu'l-Qásim was likewise moved to follow the example of his companion. "I have ceased to recognise my teacher," was his reply. "This very moment, I have vowed to God to dedicate the remaining days of my life to the service of Bahá'u'lláh, my true and only Master."
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Qur'ánSúrih1">opening Súrih of the Qur'án</a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">116</DIV></center></small></td>
 </tr>
