--- a/Baha'i/Others/DBNN/p268-287Ch15.html
+++ b/Baha'i/Others/DBNN/p268-287Ch15.html
@@ -320,7 +320,7 @@
 	The failure of the Sháh and of his government to inflict immediate punishment upon the malefactors encouraged them to seek further means for the gratification of their relentless hatred towards their opponents. They now directed their attention to Táhirih herself, and resolved that she should suffer at their hands the same fate that had befallen her companions. While still in confinement, Táhirih, as soon as she was informed of the designs of her enemies, addressed the following message to Mullá Muhammad, who had succeeded to the position of his father and was now recognised <a name="p284"></a>as the <span style="background-color: #ffffCC" TITLE="The leading imám in a town or city; chief of the mullás">Imám-Jum'ih</span> of Qazvín: "'Fain would they put out God's light with their mouths: but God only desireth to perfect His light, albeit the infidels abhor it.' <sup><small>18</small></sup> If my Cause be the Cause of Truth, if the Lord whom I worship be none other than the one true God, He will, ere nine days have elapsed, deliver me from the yoke of your tyranny. Should He fail to achieve my deliverance, you are free to act as you desire. You will have irrevocably established the falsity of my belief." Mullá Muhammad, recognising his inability to accept so bold a challenge, chose to ignore entirely her message, and sought by every cunning device to accomplish his purpose.
 	</td>
 	<td VALIGN=top><small>
-	<a name="f18"/><a href="p268-287Ch15-footnotes.html#f18">18.</a>	Qur'án, 9:33.
+	<a name="f18"/><a href="p268-287Ch15-footnotes.html#f18">18.</a> <a href="../../../CLUI/UnifiedIndex.html#Qur'án9:33">Qur'án, 9:33</a>.
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../ROB/V2/p171-193Ch08.html#p173">p. 173</a>	
 	</small></td>
