--- a/Baha'i/Others/DBNN/p378-429Ch20-footnotes.html
+++ b/Baha'i/Others/DBNN/p378-429Ch20-footnotes.html
@@ -621,7 +621,7 @@ footnote 40 - changed The "Kitáb-i-Íqán," pp. 189-91 to 224-6.
 	<td VALIGN=top><small>
 	<a name="f48"/><a href="p378-429Ch20-footnotes.html#f48">48.</a>	Literally "The Last Name of God." <p>
 	<a name="f49"/><a href="p378-429Ch20-footnotes.html#f49">49.</a>	May 16 1849 A.D.  <p>
-	<a name="f50"/><a href="p378-429Ch20-footnotes.html#f50">50.</a>	Qur'án, 3:93.  <p>
+	<a name="f50"/><a href="p378-429Ch20-footnotes.html#f50">50.</a>	<a href="../../../CLUI/UnifiedIndex.html#Qur'án3:93">Qur'án, 3:93</a>.  <p>	
 	<a name="f51"/><a href="p378-429Ch20-footnotes.html#f51">51.</a>	Literally "The Last Point."  <p>
 	<a name="f52"/><a href="p378-429Ch20-footnotes.html#f52">52.</a>	Refer to note 45, <a href="p378-429Ch20.html#para55">p. 413</a>. 
 	<hr>
